--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -1,6 +1,6 @@
 .NavbarSection{
     background-color: transparent !important;
-    position: absolute;
+    position: absolute !important;
     top:0;
     width: 100%;
     z-index: 99;
