--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,13 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+html, body{ 
+    overflow-x: hidden;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
+
+}
+body{
     font-family: "Inter", sans-serif;
     background-color: var(--bgColor) !important;
 }
